* 0.11.0-beta.3 (unreleased)
   * Added pilot.weapsetAddType and pilot.weapsetSetActive
   * `test_of_renewal`: fixed weapon set defaults being incorrect

* 0.11.0-beta.2
   * Slim GUI now shows activated outfits and all weapons all the time
   * Collision system reworked (again) to take into account fast moving particles
   * Fixed collision polygons not properly being used
   * Added short names to some outfits such that they are easier to distinguish in the GUI
   * Allied factions won't help out the player against neutral targets
   * Added missing graphics for meditation chambers
   * Don't allow giving the player names that can't be saved
   * Updated love.filesystem to 0.11 spec renaming mkdir to createDirectory, enumerate to getDirectoryItems, and adding remove
   * Fixed toggle weapon sets not turning off with only bolt weapons
   * Hardened physics engine a bit to overflow that happens in 49 days of straight game time
   * Fixed trivial memory leak in vpool
   * Allow buying local maps where they are not sold
   * Buffed Hunting Combat AI to 15% bonus
   * Made Weakness Harmonizer AI not appear as an active outfit
   * Outfit Lua function onshoot has been renamed onshootany
   * Can toggle point defense weapons on and off
   * AI will turn off weapons ionizer when going for a kill
   * Player's new ships should start will all the default outfits, which fixes the some Sirius psychic tests
   * pilot.weapsetAdd follows the same logic as the normal equipping functions
   * slim GUI uses primary/secondary colours like the info menu
   * AI should be less prone to jump before their leader
   * Fixed cargo being lost when swapping ships in missions and events
   * `chapter1`: event claims all the systems just in case
   * `poi`: renamed 'Pristine Derelict' to 'Unusual Derelict'
   * `poi_intro`: fixed typo
   * `achack03`: fixed mission not being acceptable and harja spawning forever
   * `achack04`: fixed missing formatting string