@@ -3,6 +3,7 @@
  <general>
   <shortname>U. Storm Launcher</shortname>
   <slot>weapon</slot>
+  <rarity>2</rarity>
   <size>small</size>
   <license>Medium Weapon</license>
   <mass>22</mass>
