@@ -2,4 +2,5 @@
 <tech name="Empire Elite Outfits">
  <item>Photo-Voltaic Nanobot Coating</item>
  <item>Hunting Combat AI</item>
+ <item>Unicorp Storm Launcher</item>
 </tech>
